@@ -155,19 +155,6 @@
           <target>21</target>
         </configuration>
       </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.2.5</version>
-        <configuration>
-          <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
-          <properties>
-            <configurationParameters>
-              cucumber.execution.parallel.enabled=false
-            </configurationParameters>
-          </properties>
-        </configuration>
-      </plugin>
 
     </plugins>
   </build>
